# torchtitan-npu

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  LISENCE  NOTICE  OAT.xml  README.md  build.sh  index.html  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_dev.txt  run_train.sh  run_train_multinodes.sh  setup.py
.agents/: AGENTS.md  README.md  setup_agent.sh
.agents/rules/: config.md  converters.md  distributed.md  models.md  patches.md
.agents/skills/accuracy-debug/: SKILL.md
.agents/skills/oom-analysis/: SKILL.md
.agents/skills/torchtitan-sync/: SKILL.md
.agents/skills/training-log-visualization/: SKILL.md
.ci/: ci_lint.sh  gitcode.dockerfile
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.gitcode/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.gitcode/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/actions/fetch-and-rebase/: action.yml
.github/workflows/: sync-upstream.yml
docs/: lint_guide.md
docs/feature_guides/: deepseek_v32_mtp.md  low_precision_training.md  metrics_and_debugging.md  muon_optimizer.md  npu_fused_ops.md  swap_optimizer.md  torch_compile.md
docs/feature_guides/parallelism/: custom_cp.md
docs/feature_tutorials/: custom_cp.md  swap_optimizer.md
docs/source/community/: versioning_policy.md
docs/test_guides/: test_design.md  test_design_zh.md  test_guide.md  test_guide_zh.md
docs/user-guide/: installation.md  quick-start.md
docs/user-guides/: quickstart.md
feature_guides/deepseek_v32_mtp/: index.html
feature_guides/low_precision_training/: index.html
feature_guides/metrics_and_debugging/: index.html
feature_guides/muon_optimizer/: index.html
feature_guides/npu_fused_ops/: index.html
feature_guides/parallelism/custom_cp/: index.html
feature_guides/swap_optimizer/: index.html
feature_guides/torch_compile/: index.html
lint_guide/: index.html
scripts/: download_hf_assets.py  run_train.sh  run_train_multinodes.sh  setup.py
scripts/checkpoint_conversion/: convert_from_hf.py
source/community/versioning_policy/: index.html
test_guides/test_design/: index.html
test_guides/test_design_zh/: index.html
test_guides/test_guide/: index.html
test_guides/test_guide_zh/: index.html
tests/: conftest.py
tests/smoke_tests/: base_test.toml  conftest.py  integration_test.py
tests/smoke_tests/features/: __init__.py  _dsa_model_helpers.py  test_dsa.py  test_fusion_attention.py  test_fusion_ops.py  test_gmm.py  test_li_loss.py  test_muon.py  test_permute.py  test_quant.py  test_rms_norm.py  test_rope.py  test_swap.py
tests/smoke_tests/model_parallel/: __init__.py  _multi_rank.py  test_cp_ep.py  test_tp_ep.py
tests/testing/: parallel_dims.py
tests/unit_tests/converters/: conftest.py  test_base.py  test_expert_parallel.py  test_npu_converters.py  test_npu_li.py  test_npu_li_loss.py  test_npu_mhc.py  test_npu_sfa.py  test_quant_converter.py  test_registry.py  test_rope.py
tests/unit_tests/functions/: __init__.py  test_config.py  test_convert_utils.py  test_utils.py  test_validation.py  test_weight_utils.py
tests/unit_tests/models/: test_deepseek_v32_args.py  test_deepseek_v3_parallelize.py
tests/unit_tests/modules/: __init__.py  test_checkpoint.py  test_cp.py  test_distributed.py  test_dsa_cp.py  test_muon_lr_scheduler.py  test_muon_optimizer.py  test_swap_optimizer.py
tests/unit_tests/patches/: test_custom_shardings.py  test_patches.py
torchtitan_npu/: __init__.py  entry.py  train.py
torchtitan_npu/config/: custom_config.py
torchtitan_npu/converter/: base_converter.py  kernel_converter.py  quant_converter.py  registry.py
torchtitan_npu/converter/features/: bypass_triton_codegen.py
torchtitan_npu/converter/kernels/: dsa.py  fusion_attention.py  gmm.py  permute.py  quant_gmm.py  quant_linear.py  rms_norm.py  rope.py
torchtitan_npu/converters/: __init__.py  base_converter.py  convert_utils.py  npu_converter.py  quant_converter.py  registry.py
torchtitan_npu/converters/features/: bypass_triton_codegen.py
torchtitan_npu/converters/kernels/: deepseek_v4_sfa.py  dsa.py  expert_parallel.py  fusion_attention.py  gmm.py  mhc_prepost.py  permutation.py  permute.py  quant_gmm.py  quant_linear.py  rms_norm.py  rope.py  rope_broadcast.py
torchtitan_npu/distributed/context_parallel/: dsa_cp.py  ulysses_cp.py
torchtitan_npu/models/deepseek_v3/: __init__.py
torchtitan_npu/models/deepseek_v32/: __init__.py
torchtitan_npu/models/deepseek_v4/: __init__.py
torchtitan_npu/models/llama3/: __init__.py
torchtitan_npu/ops/triton/: __init__.py  add.py  mhc_triton.py  post_bmm1.py  post_bmm2.py  pre_bmm.py  prepost_sinkhorn.py
torchtitan_npu/patches/distributed/: context_parallel_utils.py  cp_input_sharding.py  custom_context_parallel.py  mtp_context_parallel.py  utils.py
torchtitan_npu/patches/optimizer/: muon_optimizer.py  swap_optimizer.py
torchtitan_npu/patches/quantization/: quant_config.py  quantize.py
torchtitan_npu/patches/tools/: metrics.py  utils.py
torchtitan_npu/patches/torch/: clip_grad.py  (+4 more)
torchtitan_npu/tools/: checkpoint_patch.py  flight_recorder.py  profiling.py  weight_utils.py
user-guides/installation/: index.html
user-guides/quickstart/: index.html
(+44 files in other folders)
