# Copyright (c) 2026 Huawei Technologies Co., Ltd. All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[project]
name = "torchtitan_npu"
version = "0.2.2"
dependencies = [
    "torch",
    "torch_npu",
]

[project.optional-dependencies]
testing = [
    "pytest>=7.0",
    "pytest-html>=4.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "hypothesis>=6.0",
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "expecttest", # test_tokenizer
    "pyrefly==0.45.1",
]

[tool.setuptools.packages.find]
include = ["torchtitan_npu*"]
exclude = ["CI*", "test_reports*", "cloudcache*", "third_party*"]

[tool.codespell]
skip = ["*.json"]
ignore-words-list = ["cann"]

# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = ["--showlocals", "-v", "--tb=short", "--import-mode=importlib"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "nightly: heavy-weight validation reserved for nightly or dedicated multi-card environments",
    "smoke: integration/e2e smoke coverage for NPU features and training paths",
]

[tool.pyrefly]
project-excludes = ["**/tests/**", "CI"]
ignore-missing-imports = ["torchao.*", "torchft"]  # optional dependencies
search-path = ["../pytorch"]  # local built pytorch
replace-imports-with-any = ["torch_npu", "torch.npu"]

[tool.usort]
known_first_party = ["torchtitan_npu"]
